# global-macro-fin

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ecb_dataflows.xml  maturity_codelist.xml  parse_ecb_xml.py  pyproject.toml  requirements.txt  sofr_spread_test.csv  test_commodity_klines.py  test_fred.py  test_fred_sofr.py  test_oecd_365.py  test_routes.py
discuss/: VIX集成方案讨论.md  南向北向资金集成方案讨论.md  后端技术规范.md
docs/: API.md  DATA_FLOW.md  VIX数据集成技术规范.md  产品需求文档(PRD).md  技术设计文档(TDD).md  数据字典.md  数据更新端点规范.md  文档索引.md
scripts/: setup.sh  start.sh  stop.sh
src/: __init__.py  config.py  main.py  models.py
src/api/: routes.py
src/services/: china_bond_service.py  commodity_service.py  data_service.py  ecb_service.py  fred_service.py  fund_flow_service.py  hibor_service.py  index_service.py  vix_service.py
src/utils/: logger.py  retry.py
